--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -208,6 +208,7 @@
     <ClInclude Include="Exceptions\NullReferenceException.h" />
     <ClInclude Include="Exceptions\OutOfRangeException.h" />
     <ClInclude Include="Formatting\NumberFormatting.h" />
+    <ClInclude Include="Include\Game\Time\Time.h" />
     <ClInclude Include="Input\Input.h" />
     <ClInclude Include="Input\Key.h" />
     <ClInclude Include="Source\Windows\GameWindow.h" />
@@ -215,7 +216,6 @@
     <ClInclude Include="Source\Windows\Window.h" />
     <ClInclude Include="Source\Windows\WindowProcedure.h" />
     <ClInclude Include="Structs\Color.h" />
-    <ClInclude Include="Time\Time.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Debugging\Output.cpp" />
@@ -238,11 +238,11 @@
     <ClCompile Include="Exceptions\Exception.cpp" />
     <ClCompile Include="Formatting\NumberFormatting.cpp" />
     <ClCompile Include="Input\Input.cpp" />
+    <ClCompile Include="Source\Game\Time.cpp" />
     <ClCompile Include="Source\Windows\GameWindow.cpp" />
     <ClCompile Include="Source\Windows\Window.cpp" />
     <ClCompile Include="Source\Windows\WindowProcedure.cpp" />
     <ClCompile Include="Structs\Color.cpp" />
-    <ClCompile Include="Time\Time.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
